--- a/contactInfo.html
+++ b/contactInfo.html
@@ -11,12 +11,13 @@
 
 <body onload="paramGetter()">
     <div class="main-info">
-        <p>Hello <span id="myText"></span>
-        </p>
         <div>
-            <h1>welcom ya kbeer</h1>
-            <img class="sound-mandala" src="./media/Healing_Icon_Gold.4-01.png" alt="" onclick="toggle()">
-            <!-- <img class="sound-mandala" src="./media/Healing_Icon_Gold.4-01.png" alt="" onclick="audio.play()"> -->
+            <p class="hello-ya"><strong>Hello <span id="myText"></span></strong> </p>
+            <p class="hello-ya-kbeer"><strong>welcom ya kbeer</strong><br>
+
+            </p>
+            <img class="sound-mandala" src="./media/Healing_Icon_Gold.4-01.png" alt="" onclick="audio.play()">
+            <p class="hello-ya">press on the wheel and start to meditate with us</p>
 
         </div>
     </div>
