--- a/main.html
+++ b/main.html
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+              <a class="nav-link js-scroll-trigger" href="#info">Info</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#info">Info</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Connect us</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
 
     <header class="masthead text-center text d-flex animated fadeIn" id="home">
       <div class="container my-auto">
-        <div class="row">
+        <div class="row">   
           <div class="col-lg-10 mx-auto">
             <h1>
               <strong>Hi, our name is <span class="name">Majititeam</span>!</strong>
@@ -111,17 +111,17 @@
             <p class="mb-5">30-DAYS money back gauranteed</p>
           </div>
         </div>
-        <div class="container">
-            <form action="contactInfo.html" method="GET" id="form">
+        <div class="container" >
+            <form action="contactInfo.html" method="GET" class="formstyle">
             <div class="container">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your name"><br><br>
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="your email"><br><br>
             <label for="tel">Telephone</label>
-            <input type="telephone" id="tel" name="tel" placeholder="Your Telephone.."><br><br>
+            <input type="telephone" id="tel" name="tel" placeholder="Your Telephone"><br><br>
             <label for="message">Message</label>
-            <textarea id="message" name="message" placeholder="comment" style="height:100px"></textarea><br><br>
+            <textarea id="message" name="message" placeholder="message us..." style="height:100px"></textarea><br><br>
             <input type="submit" value="Send">
         
         
