--- a/main.html
+++ b/main.html
@@ -112,21 +112,41 @@
           </div>
         </div>
         <div class="container">
-            <form action="contactInfo.html" method="GET" class="formstyle">
-            <div class="container">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Your name"><br><br>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="your email"><br><br>
-            <label for="tel">Telephone</label>
-            <input type="telephone" id="tel" name="tel" placeholder="Your Telephone.."><br><br>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" placeholder="comment" style="height:100px"></textarea><br><br>
-            <input type="submit" value="Send">
-            </form>
-            </div>
-        </div>
-      </div>
+                <div class="form-style-5">
+                    <form action="contactInfo.html" method="GET" class="formstyle" >
+                    <fieldset>
+                    <legend><span class="number">1</span> Candidate Info</legend>
+                    <input type="text" name="name" placeholder="Your Name *">
+                    <input type="email" name="email" placeholder="Your Email *">
+                    <textarea name="about" placeholder="About yourself"></textarea>
+                    <label for="job">Interests:</label>
+                    <select id="job" name="Interests">
+                    <optgroup label="Indoors">
+                      <option value="fishkeeping">Fishkeeping</option>
+                      <option value="reading">Reading</option>
+                      <option value="boxing">Boxing</option>
+                      <option value="debate">Debate</option>
+                      <option value="gaming">Gaming</option>
+                      <option value="snooker">Snooker</option>
+                      <option value="other_indoor">Other</option>
+                    </optgroup>
+                    <optgroup label="Outdoors">
+                      <option value="football">Football</option>
+                      <option value="swimming">Swimming</option>
+                      <option value="fishing">Fishing</option>
+                      <option value="climbing">Climbing</option>
+                      <option value="cycling">Cycling</option>
+                      <option value="other_outdoor">Other</option>
+                    </optgroup>
+                    </select>      
+                    </fieldset>
+                    <fieldset>
+                    <legend><span class="number">2</span> Additional Info</legend>
+                    <textarea name="edu" placeholder="About Your School"></textarea>
+                    </fieldset>
+                    <input type="submit" value="Apply" />
+                    </form>
+                    </div>
     </section>
     <footer>
         <p class="container-fluid text-center"><b>Majititeam</b><span>*</span></p>
