fixing relative imgs paths

--- a/main.html
+++ b/main.html
@@ -63,21 +63,21 @@
         <div class="row">
           <div class="col-lg-4 text-center">
             <div class="service-box mt-5 mx-auto">
-                <img class="roundedimgs" src="/web-meditation-development/assets/img/bader.jpg" alt="avatar1">
+                <img class="roundedimgs" src="assets/img/bader.jpg" alt="avatar1">
                 <h3 class="mb-3">Bahoum</h3>
               <p class="text-faded mb-0">one of our lead monks, spending years peeling bananas with monkeys, some call him by his legendary nickname the peerlinator for his exqioste ability to peel and juggle up to 12 bananas at once</p>
             </div>
           </div>
           <div class="col-lg-4  text-center">
             <div class="service-box mt-5 mx-auto">
-             <img class="roundedimgs" src="/web-meditation-development/assets/img/abeer.jpg" alt="avatar2">
+             <img class="roundedimgs" src="assets/img/abeer.jpg" alt="avatar2">
                 <h3 class="mb-3">rizbeer</h3>
               <p class="text-faded mb-0">a self proven hightec do it all kind of girl, she will teach you about persaving all the positive energy</p>
             </div>
           </div>
           <div class="col-lg-4  text-center">
             <div class="service-box mt-5 mx-auto">
-             <img class="roundedimgs" src="/web-meditation-development/assets/img/hadi.jpg" alt="avatar2">
+             <img class="roundedimgs" src="assets/img/hadi.jpg" alt="avatar2">
                 <h3 class="mb-3">Lil di</h3>
               <p class="text-faded mb-0">the spiritual guru, first of his name, destoryer of stress, slayer of procastination, the father of good energy, breaker of faith<</p>
             </div>
