--- a/contactInfo.html
+++ b/contactInfo.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-          <a class="navbar-brand  " href="main.html">Majititeam</a>
+          <a class="navbar-brand  " href="index.html">Majititeam</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" id="dropdownMenu1" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
